manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yaotpbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yaotpbot
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: yaotpbot
    spec:
      containers:
        - name: main
          image: main
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
