manifests/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
spec:
  podSelector: 
    matchLabels:
      app: yaotpbot
  policyTypes:
  - Ingress
